Removes top margin for Action type responses tile builder to prevent jumping around

--- a/app/assets/stylesheets/internal/tile_builder/tile_builder.css.scss
+++ b/app/assets/stylesheets/internal/tile_builder/tile_builder.css.scss
@@ -605,6 +605,13 @@ body.suggested_tiles-update{
           } 
         }
 
+
+        &.action {
+          ul.answer_option{
+            margin-top: 0;
+          }
+        }
+
         &.quiz{
           .tile_multiple_choice_answer{
             ul.answer_option{
